<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp">
        <TextView
            android:id="@+id/tvCine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/cine"
            android:textColor="#EE0000"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvFast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:gravity=""
        android:layout_marginHorizontal="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_items"
            android:textSize="15sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:textColor="#959595"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/llSnacksCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/snacks_drinks"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:background="#161A21"
        android:padding="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="#EE0000"
            android:layout_marginEnd="5dp"
            android:id="@+id/bBookConfirm"/>

    </LinearLayout>

</LinearLayout>