<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp">
        <TextView
            android:id="@+id/tvCine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/cine"
            android:textColor="#EE0000"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvFast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginHorizontal="15dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:textColor="#959595"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbToday"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/today"
                android:background="@drawable/radio_button_selector"
                android:textColor="@drawable/selected_button"
                android:fontFamily="@font/poppins"
                android:layout_marginEnd="10dp"
                android:padding="7dp"
                app:buttonTint="@drawable/selected_button"/>
            <RadioButton
                android:id="@+id/rbTomorrow"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/tomorrow"
                android:background="@drawable/radio_button_selector"
                android:textColor="@drawable/selected_button"
                android:fontFamily="@font/poppins"
                app:buttonTint="@drawable/selected_button"/>
        </RadioGroup>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llMovieContToday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/now_showing"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMovieContTomorrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/now_showing"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>