<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleX="2.5"
            android:scaleY="2.5"
            android:src="@drawable/onboarding"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explore"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/bGetStarted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_started"
                android:layout_marginBottom="40dp"
                android:layout_marginHorizontal="15dp"
                android:backgroundTint="#EE0000"
                app:cornerRadius="10dp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>